--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router": "^6.11.2",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-to-print": "^2.14.13"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
